# hk_mbed_reference

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mbed_app.json5
custom_targets/: CMakeLists.txt  custom_targets.json5
custom_targets/TARGET_HK_TDM_F446RE/: PeripheralPins.c  PinNames.h  system_clock.c
